Remove code unnecessary due to previous changes
