# server/router/api/v1/acl_config.go
@@ -7,10 +7,8 @@ var authenticationAllowlistMethods = map[string]bool{
 	"/memos.api.v1.IdentityProviderService/GetIdentityProvider":   true,
 	"/memos.api.v1.IdentityProviderService/ListIdentityProviders": true,
 	"/memos.api.v1.AuthService/GetAuthStatus":                     true,
-	"/memos.api.v1.AuthService/SignIn":                            true,
 	"/memos.api.v1.AuthService/SignInWithSSO":                     true,
 	"/memos.api.v1.AuthService/SignOut":                           true,
-	"/memos.api.v1.AuthService/SignUp":                            true,
 	"/memos.api.v1.UserService/GetUser":                           true,
 	"/memos.api.v1.UserService/GetUserAvatarBinary":               true,
 	"/memos.api.v1.UserService/SearchUsers":                       true,
